Switch to multi-stage build using existdb/existdb image